--- a/aartics/projects/allsportsbar/index.htm
+++ b/aartics/projects/allsportsbar/index.htm
@@ -17,6 +17,16 @@
     <link rel="icon" 
       type="image/png" 
       href="../../favico.png">
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-104959516-1', 'auto');
+  ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body>
@@ -90,7 +100,7 @@
 				</div>					
 			</div>
 			<div class="row">
-				<img src="local_img/downarrow.svg" id="downarrow"/>
+				<img src="../assets_v4/img/downarrow.svg" id="downarrow"/>
 			</div>
 		</div>
 		<div class="col-sm-8" id="heroimage">
@@ -284,12 +294,6 @@
       </div>
     </div>
   </div>
-
-  <script>
-    if(window.innerHeight < window.innerWidth){
-        $("#landing").css({"height":"920px","background-size":"100%", "background-position": "center 50px"})
-    }
-  </script>
 
 </body>
 </html>
