--- a/aartics/projects/assen/index copy.htm
+++ b/aartics/projects/assen/index copy.htm
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>aartics_sports_bar</title>
+  <title>aartics_assen</title>
   <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <meta name="aartics portfolio" content="aartics portfolio">
@@ -32,13 +32,14 @@
       <a href="http://www.aartics.com">aartics.com</a>
     </div>
     <span class="dropdown">
-        <button class="dropbtn">Interiors: All Sports Bar</button>
+        <button class="dropbtn">Urban Design: City Boulevard, Assen</button>
         <div class="dropdown-content">
-          <a href="https://www.aartics.com/projects/bendy">Product: Shelter-Cart, New York</a>
-          <a href="https://github.com/aartics/chess_models">Product: Chess of Thrones</a>
-          <a href="https://www.aartics.com/projects/octet">Product: Octet Truss Block</a>
-          <a href="https://www.aartics.com/projects/allsportsbar">Interiors: All Sports Bar</a>
-          <a href="https://www.aartics.com/projects/graphics">Graphics: Miscellaneous</a>
+          <a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a>
+          <a href="https://www.aartics.com/projects/aartics_urbanism.pdf">Urbanism Portfolio PDF</a>
+          <a href="https://www.aartics.com/projects/coimbatore">Architecture: Mall in Coimbatore</a>
+          <a href="https://www.aartics.com/projects/assen">Urban Design: City Boulevard, Assen</a>
+          <a href="https://www.aartics.com/projects/mumbai">Urban Design: Recentering Mumbai</a>
+          <a href="https://www.aartics.com/projects/barcelona">Urban Planning: Barcelona Idea</a>
           <a href="https://www.aartics.com">More projects</a>
         </div>
     </span>
@@ -51,32 +52,27 @@
 <div id="project-content">
   <div class="image-title">
   Project Context
-  <h2>Role: Architect, Arris Architects, Mumbai</h2>
+  <h2>Role: Urban Designer at Studio Franz Ziegler, Rotterdam</h2>
   </div>
-  <img src="local_img/allsports_intro.png">
+  <img src="local_img/assen_intro.png"/>
 
   <div class="image-title">
-  3D views of design to be executed
+  Presenting the master plan
+  <p><br>Assen is developing a city boulevard, and Studio Franz Ziegler was appointed to supervise the development. I got involved in the project when it was at it's deliverables stage - we made the essential drawings like plans, maps and sections.</p>
   </div>
-  <img src="local_img/002_allsports_02_view.png">
+  <img src="local_img/assen_01_map.png"/>
   <div class="image-title">
-  3D plan view of furniture layout
+  A Ten Meter Model for the citizens
+  <p><br>The studio developed a scaled model of the entire boulevard, resulting in a 10M model which served as a great tool for common discussions and understanding</p>
+  <p>We presented the design and discussed the minute details with the citizens at evenings in the City Hall of Assen<p>
   </div>
-  <img src="local_img/allsports_03_plan.png">
+  <img src="local_img/assen_pic1.png" width="100%"/>
+  <img src="local_img/assen_pic2.png" width="100%"/>
   <div class="image-title">
-  Completed project site maps exactly to design concept
-  <p><br>The design and execution of this project was completed in 25 days, right before the launch of the internation cricket tournament</p>
+    Prototyping in models
+    <p><br>This is my first city-scaled strategic urban planning project and learnt a lot, especially about the Dutch culture of Urbanism</p>
   </div> 
-  <img src="local_img/003_allsports_01_pic.png">
-  <img src="local_img/allsports_04_pic.png">
-  <div class="image-title">
-  Architect with Arris Architects, Mumbai
-  <p><br>This project was designed and completed when I was an architect with Arris Architects, Mumbai.</p>
-  </div>
-  <img src="local_img/all_sports_end_arris.png">
-  <div class="image-title">
-  <a href="../aartics_architecture.pdf" target="_blank">Click here to see complete Architectural design portfolio</a>
-  </div>
+  <img src="local_img/assen_pic3.png"/>
 </div>
   <footer>
     <div class="parentfooter">
@@ -98,6 +94,5 @@
         $("#landing").css({"height":"920px","background-size":"100%", "background-position": "center 50px"})
     }
   </script>
-
 </body>
 </html>
