--- a/aartics/projects/assen/index.htm
+++ b/aartics/projects/assen/index.htm
@@ -2,97 +2,301 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>aartics_assen</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>aartics - assen</title>
   <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <meta name="aartics portfolio" content="aartics portfolio">
-  <meta name="aarti c sharma" content="aartics_portfolio">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="../aartics_projects.css">
-  <style>
-      #landing {
-          height: 1350px;
-          background: url(local_img/001.png);
-          background-repeat: no-repeat;
-          background-position: center 200px;
-          background-color: #22313f;
-          background-size: 195%;
-      }
-  </style>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:800" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../assets_v4/css/aartics_projects_v4.css"/>
+    <link rel="icon" 
+      type="image/png" 
+      href="../../favico.png">
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-104959516-1', 'auto');
+  ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body>
-<div id="header-wrapper">
-  <div id="header-banner">
-    <div id="logoaa">
-      <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
-    </div>
-    <div id="back-button">
-      <a href="http://www.aartics.com">aartics.com</a>
-    </div>
-    <span class="dropdown">
-        <button class="dropbtn">Urban Design: City Boulevard, Assen</button>
+    <header>
+      <div class="aarticslogo">
+        <a class="aarticslogobtn" href="https://www.aartics.com"><img src="../../img/aarticslogo.png"/></a>
+      </div>
+      <ul id="ul_top_hypers">
+        <li class="a_top_hypers dropdown" id="area2dd">
+            <button class="dropbtn" id="area2">UX Designer</button>
+            <div class="dropdown-content">
+              <a href="https://www.aartics.com/projects/resonateai">UX project: Resonate.ai</a>
+              <a href="https://www.aartics.com/projects/aartics_story">Web Dev: 3D aartics.com</a>
+              <a href="https://www.aartics.com/projects/sfac">UX project: SF Arts Commission</a>
+              <a href="https://www.aartics.com/projects/wolflion">UX project: Wolf and Lion</a>
+              <a href="https://www.aartics.com/projects/karunavr">UX project: Karuna VR</a>
+            </div>
+        </li>
+        <li class="a_top_hypers dropdown" id="area3dd">
+            <button class="dropbtn" id="area3">Architect</button>
+            <div class="dropdown-content">
+              <a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a>
+              <a href="https://www.aartics.com/projects/aartics_urbanism.pdf">Urbanism Portfolio PDF</a>
+              <a href="https://www.aartics.com/projects/coimbatore">Architecture: Mall in Coimbatore</a>
+              <a href="https://www.aartics.com/projects/assen">Urban Design: City Boulevard, Assen</a>
+              <a href="https://www.aartics.com/projects/mumbai">Urban Design: Recentering Mumbai</a>
+              <a href="https://www.aartics.com/projects/barcelona">Urban Planning: Barcelona Idea</a>
+            </div>
+        </li>
+        <li class="a_top_hypers dropdown" id="area4dd">
+            <button class="dropbtn" id="area4">Maker</button>
+            <div class="dropdown-content">
+              <a href="https://www.aartics.com/projects/bendy">Product: Shelter-Cart, New York</a>
+              <a href="https://github.com/aartics/chess_models">Product: Chess of Thrones</a>
+              <a href="https://www.aartics.com/projects/octet">Product: Octet Truss Block</a>
+              <a href="https://www.aartics.com/projects/allsportsbar">Interiors: All Sports Bar</a>
+              <a href="https://www.aartics.com/projects/graphics">Graphics: Miscellaneous</a>
+            </div>
+        </li>
+        <li class="a_top_hypers dropdown" id="area5dd">
+            <button class="dropbtn" id="area5">Engineer</button>
+            <div class="dropdown-content">
+              <a href="https://github.com/aartics">My GitHub page</a>
+              <a href="https://www.linkedin.com/in/aartics">My LinkedIn Profile</a>
+              <a href="aartics_resume.pdf">My Resume</a>
+            </div>
+        </li>
+      <li class="a_top_hypers dropdown" id="area6dd">
+        <button class="dropbtn" id="area6">About</button>
         <div class="dropdown-content">
-          <a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a>
-          <a href="https://www.aartics.com/projects/aartics_urbanism.pdf">Urbanism Portfolio PDF</a>
-          <a href="https://www.aartics.com/projects/coimbatore">Architecture: Mall in Coimbatore</a>
-          <a href="https://www.aartics.com/projects/assen">Urban Design: City Boulevard, Assen</a>
-          <a href="https://www.aartics.com/projects/mumbai">Urban Design: Recentering Mumbai</a>
-          <a href="https://www.aartics.com/projects/barcelona">Urban Planning: Barcelona Idea</a>
-          <a href="https://www.aartics.com">More projects</a>
+          <a href="https://www.aartics.com">I'm Aarti, <br> an engineer <br>and designer <br>seeking new <br>opportunities</a>
         </div>
-    </span>
-  </div>
-</div>
+      </li>
+      </ul>
+    </header>
 
-<div id="landing">
-</div>
+	<div class="container-fluid">
+	  <div class="row">
+		<div class="col-sm-4" id="intro-text">
+		<img src="local_img/aartics_icon_v4.png" id="intro-logo"/>
+		<h1>city boulevard, assen</h1>
+		<p>As an urban planner working with Franz Ziegler Studio in The Netherlands, we mapped a detailed proposal for changing the main city corridor of Assen, NL</p>
+			<div class="row">
+				<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
+					<img src="../assets_v4/img/sandtimer_solid.png"/>
+					<h6>Team size: 3</h6>
+				</div>
+				<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
+					<img src="../assets_v4/img/sandtime.png"/>
+					<h6>Duration: 6 months</h6>
+				</div>					
+			</div>
+			<div class="row">
+				<img src="../assets_v4/img/downarrow.svg" id="downarrow"/>
+			</div>
+		</div>
+		<div class="col-sm-8" id="heroimage">
+			<img src="local_img/assen_01_map.png" id="heroimageimg"/>
+		</div>
+	  </div>
+	</div>
 
-<div id="project-content">
-  <div class="image-title">
-  Project Context
-  <h2>Role: Urban Designer at Studio Franz Ziegler, Rotterdam</h2>
-  </div>
-  <img src="local_img/assen_intro.png"/>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="problem">
+				<a href="#problem-1">		
+					<p class="boxtitle" id="problemtitle">problem</p>
+					<img id="problemsrc" src="../assets_v4/img/icon_problem.png"/>
+					<p class="introdesc" id="problemdesc">For my design portfolio, aartics.com I undertook making a 3D representation my project gallery, viewed as if in a VR/AR world.</p>
+				</a>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="solution">
+				<a href="#solution-1">
+					<p class="boxtitle" id="solutiontitle">solution</p>
+					<img id="solutionsrc" src="../assets_v4/img/icon_solution.png"/>
+					<p class="introdesc" id="solutiondesc">Imagining new media futures.</p>
+				</a>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="process">
+				<a href="#process-1">
+					<p class="boxtitle" id="processtitle">process</p>
+					<img id="processsrc" src="../assets_v4/img/icon_process.png"/>
+					<p class="introdesc" id="processdesc"> Research  &nbsp;&nbsp;|&nbsp;&nbsp;  Wireframe &nbsp;&nbsp;|&nbsp;&nbsp; Product Design &nbsp;&nbsp;|&nbsp;&nbsp; Prototype &nbsp;&nbsp;|&nbsp;&nbsp; Feature and User Flow Map &nbsp;&nbsp;|&nbsp;&nbsp; Interaction Design &nbsp;&nbsp;|&nbsp;&nbsp; Visual Design &nbsp;&nbsp;|&nbsp;&nbsp; Product Roadmap</p>
+				</a>
+			</div>
+		</div>
+	</div>
 
-  <div class="image-title">
-  Presenting the master plan
-  <p><br>Assen is developing a city boulevard, and Studio Franz Ziegler was appointed to supervise the development. I got involved in the project when it was at it's deliverables stage - we made the essential drawings like plans, maps and sections.</p>
-  </div>
-  <img src="local_img/assen_01_map.png"/>
-  <div class="image-title">
-  A Ten Meter Model for the citizens
-  <p><br>The studio developed a scaled model of the entire boulevard, resulting in a 10M model which served as a great tool for common discussions and understanding</p>
-  <p>We presented the design and discussed the minute details with the citizens at evenings in the City Hall of Assen<p>
-  </div>
-  <img src="local_img/assen_pic1.png" width="100%"/>
-  <img src="local_img/assen_pic2.png" width="100%"/>
-  <div class="image-title">
-    Prototyping in models
-    <p><br>This is my first city-scaled strategic urban planning project and learnt a lot, especially about the Dutch culture of Urbanism</p>
-  </div> 
-  <img src="local_img/assen_pic3.png"/>
-</div>
-  <footer>
-    <div class="parentfooter">
-        <div class="signature">
-          <p>designed and developed by <a href="https://aartics.com">&copy; aartics.com </a></p>
+	<div class="container-fluid itemblock" id="problem-1">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_problem_color.png"/>
+			<p class="itemblock-sectiontitle-problem">problem synthesis</p>
+			<h1 class="itemblock-itemtitle">project context</h1>
+			<p class="itemblock-paragraph">Role: Urban Designer at Studio Franz Ziegler, Rotterdam</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Project description:</p>
+				<img class="itemblock-image-img" src="local_img/001.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock" id="solution-1">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
+			<p class="itemblock-sectiontitle-solution">solution</p>
+			<h1 class="itemblock-itemtitle">a ten meter model for the citizens </h1>
+			<p class="itemblock-paragraph">The studio developed a scaled model of the entire boulevard, 
+			resulting in a 10M model which served as a great tool for common discussions and understanding</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
+				<div class="row itemblock-image-title-div">
+					<p class="itemblock-image-title">10 M Model photographs:</p>
+                    <img class="itemblock-image-img" src="local_img/assen_pic2.png"/>
+				</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock" id="process-1">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">public participation with citizens</h1>
+			<p class="itemblock-paragraph">We presented the design and discussed the minute details with the citizens at evenings in the City Hall of Assen</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Picture of me in helping present our urban plan proposal at City Hall, Assen:</p>
+				<img class="itemblock-image-img" src="local_img/pubpart.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">master plan</h1>
+			<p class="itemblock-paragraph">Assen is developing a city boulevard, and 
+			Studio Franz Ziegler was appointed to supervise the development. 
+			I got involved in the project when it was at it's deliverables stage - 
+			we made the essential drawings like plans, maps and sections.</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Master Plan:</p>
+				<img class="itemblock-image-img" src="local_img/materplan.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>	
+	<div class="container-fluid itemblock">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">prototyping in models</h1>
+			<p class="itemblock-paragraph">This is my first city-scaled strategic urban planning project 
+			and learnt a lot, especially about the Dutch culture of Urbanism</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Dutch Urban Planning culture:</p>
+				<img class="itemblock-image-img" src="local_img/assenmodel.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">experience</h1>
+			<p class="itemblock-paragraph">This project was designed and completed when I was an Assistant Urban Planner at Studio Franz Ziegler, Rotterdam.</p>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Experience with Studio Franz Ziegler in Rotterdam:</p>
+				<img class="itemblock-image-img" src="local_img/assenaarti.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-6 col-sm-6 col-md-2 footer-tile unoux">
+        <h3>more ux design:</h3>
+        <ul>
+          <li><a href="https://www.aartics.com/projects/resonateai">Resonate.ai</a></li>
+          <li><a href="https://www.aartics.com/projects/aartics_story">3D aartics.com</li>
+          <li><a href="https://www.aartics.com/projects/sfac">SF Arts Commission</a></li>
+          <li><a href="https://www.aartics.com/projects/wolflion">Wolf and Lion</a></li>
+          <li><a href="https://www.aartics.com/projects/karunavr">Karuna VR</a></li>
+        </ul>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-2 footer-tile dosarch">
+        <h3>architecture:</h3>
+        <ul>
+          <li><a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a></li>
+          <li><a href="https://www.aartics.com/projects/coimbatore">Mall in Coimbatore</a></li>
+          <li><a href="https://www.aartics.com/projects/assen">City Boulevard, Assen</a></li>
+          <li><a href="https://www.aartics.com/projects/mumbai">Recentering Mumbai</a></li>
+          <li><a href="https://www.aartics.com/projects/barcelona">Barcelona Idea</a></li>
+        </ul>       
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-2 footer-tile tresmaker">
+        <h3>maker projects:</h3>
+        <ul>
+          <li><a href="https://www.aartics.com/projects/bendy">Shelter-Cart, New York</a></li>
+          <li><a href="https://github.com/aartics/chess_models">Chess of Thrones</a></li>
+          <li><a href="https://www.aartics.com/projects/octet">Octet Truss Block</a></li>
+          <li><a href="https://www.aartics.com/projects/allsportsbar">All Sports Bar</a></li>
+          <li><a href="https://www.aartics.com/projects/graphics">Miscellaneous Graphics</a></li>
+        </ul>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-2 footer-tile quatroeng">
+        <h3>engineering profile:</h3>
+        <ul>
+          <li><a href="https://www.aartics.com">My Website: aartics.com</a></li>
+          <li><a href="https://github.com/aartics">My GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/aartics">My LinkedIn Profile</a></li>
+          <li><a href="aartics_resume.pdf">My Resume</a></li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-4 footer-tile cincoabout">
+        <h3 id="abouth3">about me:</h3>
+        <p>I'm Aarti. I'm a designer + developer and I'm bringing together my past experience in architecture and software engineering to build new futures. Get in touch:</p>
+        <div class="row logocwrapper">
+          <a href="https://www.aartics.com" class="logoc"><img src="../../aartics_icon_v4_white.png"></a>
+          <a href="aartics_resume.pdf" class="logoc"><img src="../../img/resume_white.png"/></a>
+          <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="../../img/linkedin_white.png"/></a>
+          <a href="mailto:aartics@gmail.com" class="logoc"><img src="../../img/mail_white.png"/></a>
+          <a href="https://github.com/aartics" class="logoc"><img src="../../img/github_white.png"/></a>
         </div>
-        <div class="logowrapper">
-          <a href="https://www.aartics.com" class="logoc"><img src="../aartics_icon.png"></a>
-          <a href="aartics_resume.pdf" class="logoc"><img src="../../img/resume.png"/></a>
-          <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="../../img/linkedin.png"/></a>
-          <a href="mailto:aartics@gmail.com" class="logoc"><img src="../../img/mail.png"/></a>
-          <a href="https://github.com/aartics" class="logoc"><img src="../../img/github.png"/></a>
-        </div>
+        <p class="signature" id="signed">designed and developed by<a href="https://www.aartics.com"> &copy; aartics &nbsp;</a></p>
+      </div>
     </div>
-  </footer>
+  </div>
 
-  <script>
-    if(window.innerHeight < window.innerWidth){
-        $("#landing").css({"height":"920px","background-size":"100%", "background-position": "center 50px"})
-    }
-  </script>
 </body>
 </html>
